# PracSignal

./: db.sqlite3  manage.py  pyproject.toml
profiles/: admin.py  models.py
profiles/migrations/: 0001_initial.py  0002_initial.py
signalPrac/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
